--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "one_messenger",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "bulma": "^0.8.0",
+    "bulma-quickview": "^2.0.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0"
