--- a/.gitignore
+++ b/.gitignore
@@ -388,3 +388,9 @@ modules.xml
 .history
 
 # End of https://www.gitignore.io/api/node,sass,ruby,rubymine,rubymine+all,rubymine+iml,visualstudiocode
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
